fixed homepage wrapping issue

--- a/content/development/scss/_displayWorkSection.scss
+++ b/content/development/scss/_displayWorkSection.scss
@@ -24,7 +24,7 @@
 					max-width: 240px;
 					width: 100%;
 				}
-				
+
 				>.btn {
 					position: absolute;
 			    bottom: 20px;
@@ -60,10 +60,10 @@
 
 				>.dblBorderBox {
 					h2 {
-						white-space: nowrap;
+						// white-space: nowrap;
 					}
 				}
 			}
 		}
 	}
-} 
+}
